methods.picture.PictureMono3.scala.error
Erreur de compilation :
PictureMono3:1: error: Missing closing brace `}' assumed here
override def run() {
^PictureMono3:1: error: expected start of definition
override def run() {
         ^